--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Awui vamos a haccer un blog post</h1>
-    <p>Y este es un parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+        <h1>Este es el titulo atractivo e interesante del post</h1>
+        <P>Y este es el parrafo de inicio donde vamos a explicar 
+            las cosas increibles que se pueden hacer con ramas
+        </P>
+     </div>
+    </div>
+        
 </body>
 </html>
