Agregando el contenido adicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,13 @@
         <P>Y este es el parrafo de inicio donde vamos a explicar 
             las cosas increibles que se pueden hacer con ramas
         </P>
+        <p>
+            Los blogs es la mejor manera
+            de compartir informacion y tus ideas
+            mucho mas que ir a conferencias o salir
+            en youtube. execepto si eres un rockstar
+            pero estadisticamente no lo eres por ahora
+        </p>
      </div>
     </div>
         
