agregue suscripcion, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -25,6 +25,7 @@
             en youtube. execepto si eres un rockstar
             pero estadisticamente no lo eres por ahora
         </p>
+        <p>Suscribite y dale like</p>
      </div>
     </div>
         
